# vadar-visual-agent

./: .env.example  .gitignore  CLONE_AND_SETUP_GUIDE.md  CONTRIBUTING.md  Dockerfile  EXECUTION_GUIDE.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  clone_and_setup.sh  config.yaml  conftest.py  demo_notebook.ipynb  download_omni3d_json.sh  evaluate_benchmark.py  pyproject.toml  quickstart.py  requirements.txt  setup_omni3d_data.py  setup_windows.ps1  test_agent.py  vadar_agent.py  verify_clone_setup.py  verify_setup.py
.github/workflows/: ci.yml
data/: sample_test_cases.json
data/omni3d/: annotations  images  test_cases.json  test_cases_objectron_val.json  test_cases_objectron_val_100.json  test_cases_objectron_val_run.json
my_data/: test_cases.json
tests/: test_code_generator.py  test_spatial_reasoner.py  test_vadar_agent.py
